--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -1,53 +1,37 @@
 name: Patent Scraper
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:  # allows manual trigger
+  workflow_dispatch:   # allows manual triggering
+  schedule:
+    - cron: '0 0 * * *'  # optional: daily at midnight
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
-    timeout-minutes: 60  # increase if scraping might take long
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pandas gspread gspread_dataframe selenium requests
+    - name: Install system dependencies for Chrome
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y wget unzip xvfb libxi6 libgdk-pixbuf2.0-0 \
+          libxss1 libnss3 libatk-bridge2.0-0 libgtk-3-0 libxcomposite1 \
+          libxcursor1 libasound2 libatk1.0-0 libpangocairo-1.0-0
 
-      - name: Install Chrome
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y wget unzip xvfb libxi6 libgconf-2-4
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo apt install -y ./google-chrome-stable_current_amd64.deb
+    - name: Install Python dependencies
+      run: |
+        pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Install ChromeDriver
-        run: |
-          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
-          wget https://chromedriver.storage.googleapis.com/${CHROME_VERSION}/chromedriver_linux64.zip
-          unzip chromedriver_linux64.zip
-          sudo mv chromedriver /usr/local/bin/
-          sudo chmod +x /usr/local/bin/chromedriver
-
-      - name: Set Google Sheets credentials
-        env:
-          GSHEETS_KEY_JSON: ${{ secrets.GSHEETS_KEY_JSON }}
-        run: |
-          echo "Google Sheets secret set."
-
-      - name: Run scraper
-        env:
-          GSHEETS_KEY_JSON: ${{ secrets.GSHEETS_KEY_JSON }}
-        run: |
-          python scraper.py
+    - name: Run scraper
+      env:
+        GSHEETS_KEY_JSON: ${{ secrets.GSHEETS_KEY_JSON }}
+      run: |
+        python scraper.py
