--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -23,7 +23,8 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y wget unzip xvfb libxi6 libgdk-pixbuf2.0-0 \
           libxss1 libnss3 libatk-bridge2.0-0 libgtk-3-0 libxcomposite1 \
-          libxcursor1 libasound2 libatk1.0-0 libpangocairo-1.0-0
+          libxcursor1 libatk1.0-0 libpangocairo-1.0-0
+
 
     - name: Install Python dependencies
       run: |
