Update scraper.yml -- hardcoded python dependency installments

--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -28,8 +28,7 @@ jobs:
 
     - name: Install Python dependencies
       run: |
-        pip install --upgrade pip
-        pip install -r requirements.txt
+          pip install gspread pandas gspread-dataframe selenium
 
     - name: Run scraper
       env:
