--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -10,33 +10,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
 
-    - name: Install system dependencies for Chrome
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y wget unzip xvfb libxi6 libgdk-pixbuf2.0-0 \
-          libxss1 libnss3 libatk-bridge2.0-0 libgtk-3-0 libxcomposite1 \
-          libxcursor1 libatk1.0-0 libpangocairo-1.0-0
+      - name: Install system dependencies for Chrome
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget unzip xvfb libxi6 libgdk-pixbuf2.0-0 \
+            libxss1 libnss3 libatk-bridge2.0-0 libgtk-3-0 libxcomposite1 \
+            libxcursor1 libatk1.0-0 libpangocairo-1.0-0
 
-
-    - name: Install Python dependencies
-      run: |
+      - name: Install Python dependencies
+        run: |
+          pip install --upgrade pip
           pip install gspread pandas gspread-dataframe selenium
 
-    - name: Debug env
-      run: |
+      - name: Debug env
+        run: |
           echo "GSHEET_KEY_JSON exists? ${GSHEET_KEY_JSON:+yes}"
+        env:
+          GSHEET_KEY_JSON: ${{ secrets.GSHEET_KEY_JSON }}
 
-
-    - name: Run scraper
-      env:
-        GSHEETS_KEY_JSON: ${{ secrets.GSHEET_KEY_JSON }}
-      run: |
-        python github_patent_scraping.py
+      - name: Run scraper
+        env:
+          GSHEET_KEY_JSON: ${{ secrets.GSHEET_KEY_JSON }}
+        run: |
+          python github_patent_scraping.py
