--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           pip install --upgrade pip
-          pip install gspread pandas gspread-dataframe selenium
+          pip install gspread pandas gspread-dataframe selenium webdriver-manager
 
       - name: Debug env
         run: |
